# saturn

./: .dockerignore  .gitattributes  Dockerfile  README.md  Taskfile.yml  compose.yaml
.github/workflows/: build_push.yml
backend/: .gitignore  Taskfile.yml  main.py  openapi.json  openapi.py  pyproject.toml
backend/api/: main.py
backend/api/router/: health_router.py  oauth_google_drive_router.py  storage_router.py
backend/api/service/: oauth.py
backend/api/storage/: settings.py  storage.py
backend/api/transfer/: google_drive2local.py  local2google_drive.py
frontend/: .env.development  index.html  orval.config.mjs  package-lock.json  package.json
frontend/app/: root.tsx
frontend/app/components/: DragProvider.tsx  GoogleDriveAuth.tsx  StorageProvider.tsx  StorageTree.tsx
frontend/app/routes/: _index.tsx  auth.callback.google.tsx
frontend/src/: App.css  App.tsx  DragProvider.tsx  GoogleDriveAuth.tsx  StorageProvider.tsx  StorageTree.tsx  index.css  main.tsx
frontendv2/app/components/: DragProvider.tsx  GoogleDriveAuth.tsx  StorageProvider.tsx  StorageTree.tsx
frontendv2/app/routes/: _index.tsx
